# model2dll

./: .gitignore  CMakeLists.txt  DependenciesReport.txt  README.md  convert.ps1  convertor.ps1  model.h  model_embed.h  normal.cpp  onnx.sln  onnx.vcxproj  onnx.vcxproj.filters  trans_model2dll.py
